--- a/package.json
+++ b/package.json
@@ -1,13 +1,35 @@
 {
     "name": "wiki_links",
-    "main": "./lib/wiki_links",
+    "main": "./lib/index",
     "version": "0.1.0",
     "description": "Bring wiki style links to Inkdrop.",
     "keywords": [],
     "repository": "https://github.com/ryanpcmcquen/inkdrop_wiki_links",
     "license": "MPL-2.0",
+    "styleSheets": [
+        "wiki_links.less"
+    ],
+    "scripts": {
+        "build": "babel src/ -d lib/",
+        "dev": "babel src/ -s -d lib/ --watch"
+    },
     "engines": {
         "inkdrop": "^5.x"
     },
-    "dependencies": {}
+    "dependencies": {
+        "trim-trailing-lines": "^1.1.2"
+    },
+    "devDependencies": {
+        "@babel/cli": "7.x.x",
+        "@babel/core": "7.x.x",
+        "@babel/plugin-proposal-class-properties": "7.x.x",
+        "@babel/preset-env": "7.x.x",
+        "@babel/preset-react": "7.x.x",
+        "babel-eslint": "10.x.x",
+        "eslint": "7.x.x",
+        "eslint-config-prettier": "7.x.x",
+        "eslint-plugin-prettier": "3.x.x",
+        "eslint-plugin-react": "7.x.x",
+        "prettier": "2.x.x"
+    }
 }
