--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "inkdrop": "^5.x"
     },
     "dependencies": {
-        "trim-trailing-lines": "^1.1.2"
+        "remark-wiki-link": "0.x.x"
     },
     "devDependencies": {
         "@babel/cli": "7.x.x",
