Need to figure out why onClick is getting removed.
Signed-off-by: Ryan McQuen <rpcm@linux.com>

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "inkdrop": "^5.x"
     },
     "dependencies": {
-        "remark-wiki-link": "0.x.x"
+        "unist-util-map": "2.x.x"
     },
     "devDependencies": {
         "@babel/cli": "7.x.x",
