--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "repository": "https://github.com/ryanpcmcquen/inkdrop_wiki_links",
     "license": "MPL-2.0",
     "styleSheets": [
-        "wiki_links.less"
+        "wiki_link.less"
     ],
     "scripts": {
         "build": "babel src/ -d lib/",
