--- a/package.json
+++ b/package.json
@@ -16,20 +16,13 @@
     "engines": {
         "inkdrop": "^5.x"
     },
-    "dependencies": {
-        "unist-util-map": "2.x.x"
-    },
+    "dependencies": {},
     "devDependencies": {
         "@babel/cli": "7.x.x",
         "@babel/core": "7.x.x",
         "@babel/plugin-proposal-class-properties": "7.x.x",
         "@babel/preset-env": "7.x.x",
         "@babel/preset-react": "7.x.x",
-        "babel-eslint": "10.x.x",
-        "eslint": "7.x.x",
-        "eslint-config-prettier": "7.x.x",
-        "eslint-plugin-prettier": "3.x.x",
-        "eslint-plugin-react": "7.x.x",
         "prettier": "2.x.x"
     }
 }
