--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "version": "0.1.2",
     "description": "Bring wiki style links to Inkdrop.",
     "keywords": [],
-    "repository": "https://github.com/ryanpcmcquen/inkdrop_wiki_links",
+    "repository": "git@github.com:ryanpcmcquen/inkdrop_wiki_links.git",
     "license": "MPL-2.0",
     "styleSheets": [
         "wiki_link.less"
