--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "wiki_links",
     "main": "./lib/index",
-    "version": "0.1.8",
+    "version": "0.1.9-dev",
     "description": "Bring wiki style links to Inkdrop.",
     "keywords": [],
     "repository": "git@github.com:ryanpcmcquen/inkdrop_wiki_links.git",
