--- a/package.json
+++ b/package.json
@@ -10,21 +10,31 @@
         "wiki_link.less"
     ],
     "scripts": {
-        "build": "tsc src/wiki_completions.ts && babel src/ -d lib/",
-        "dev": "tsc src/wiki_completions.ts && babel src/ -s -d lib/ --watch"
+        "build": "babel src/ -d lib/",
+        "dev": "babel src/ -s -d lib/ --watch"
     },
     "engines": {
         "inkdrop": "^5.x"
     },
     "devDependencies": {
-        "@babel/cli": "7.x.x",
-        "@babel/core": "7.x.x",
-        "@textcomplete/core": "^0.1.8",
-        "@types/node": "^14.14.19",
+        "@babel/cli": "^7.12.10",
+        "@babel/core": "^7.12.0",
+        "@babel/plugin-proposal-class-properties": "7.12.1",
         "@babel/preset-env": "7.x.x",
         "@babel/preset-react": "7.x.x",
+        "@babel/preset-typescript": "^7.12.7",
         "@textcomplete/codemirror": "^0.1.8",
+        "@textcomplete/core": "^0.1.8",
         "@types/codemirror": "0.0.56",
+        "@types/node": "^14.14.19",
+        "@typescript-eslint/eslint-plugin": "4.11.1",
+        "babel-core": "^6.26.0",
+        "babel-loader": "^7.1.2",
+        "babel-plugin-module-resolver": "4.1.0",
+        "babel-plugin-transform-object-rest-spread": "^6.26.0",
+        "babel-preset-env": "^1.6.1",
+        "eslint": "^7.17.0",
+        "eslint-plugin-module-resolver": "^1.2.0",
         "prettier": "2.x.x"
     }
 }
