--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,5 @@
 {
     "presets": [
-      ["env", { "targets": { "node": "current" } }],
         "@babel/preset-typescript",
         "@babel/preset-react",
         [
@@ -8,13 +7,13 @@
             {
                 "targets": {
                     "electron": "7.3.2",
-                    "node": 14
+                    "node": 12
                 }
             }
         ],
-       
-               
-            
+
+
+
     ],
     "plugins": [
         [
@@ -35,7 +34,8 @@
                 ]
             }
         ],
-        "@babel/plugin-proposal-class-properties"
+        "@babel/plugin-proposal-class-properties",
+        "@babel/plugin-proposal-object-rest-spread"
     ],
     "sourceMaps": true
 }
