--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "wiki_links",
     "main": "./lib/index",
-    "version": "0.1.14",
+    "version": "0.2.0",
     "description": "Bring wiki style links to Inkdrop.",
     "keywords": [],
     "repository": "https://github.com/ryanpcmcquen/inkdrop_wiki_links.git",
@@ -10,31 +10,33 @@
         "wiki_link.less"
     ],
     "scripts": {
-        "build": "babel src/ -d lib/",
-        "dev": "babel src/ -s -d lib/ --watch"
+        "build": "babel src/ -s --extensions .js,.jsx,.ts,.tsx -d lib/",
+        "build-broken": "babel src/ -s --extensions '.js,.jsx,.ts,.tsx' -d lib/",
+        "dev": "babel src/ -s --extensions .js,.jsx,.ts,.tsx -d lib/ --watch"
     },
     "engines": {
         "inkdrop": "^5.x"
     },
+    "dependencies": {
+        "@textcomplete/codemirror": "0.x.x",
+        "@textcomplete/core": "0.x.x"
+    },
     "devDependencies": {
-        "@babel/cli": "^7.12.10",
-        "@babel/core": "^7.12.0",
-        "@babel/plugin-proposal-class-properties": "7.12.1",
+        "@babel/cli": "7.x.x",
+        "@babel/core": "7.x.x",
+        "@babel/plugin-proposal-class-properties": "7.x.x",
+        "@babel/plugin-proposal-object-rest-spread": "7.x.x",
         "@babel/preset-env": "7.x.x",
         "@babel/preset-react": "7.x.x",
-        "@babel/preset-typescript": "^7.12.7",
-        "@textcomplete/codemirror": "^0.1.8",
-        "@textcomplete/core": "^0.1.8",
-        "@types/codemirror": "0.0.56",
-        "@types/node": "^14.14.19",
-        "@typescript-eslint/eslint-plugin": "4.11.1",
-        "babel-core": "^6.26.0",
-        "babel-loader": "^7.1.2",
-        "babel-plugin-module-resolver": "4.1.0",
-        "babel-plugin-transform-object-rest-spread": "^6.26.0",
-        "babel-preset-env": "^1.6.1",
-        "eslint": "^7.17.0",
-        "eslint-plugin-module-resolver": "^1.2.0",
-        "prettier": "2.x.x"
+        "@babel/preset-typescript": "7.x.x",
+        "@types/codemirror": "0.x.x",
+        "@types/node": "14.x.x",
+        "@typescript-eslint/eslint-plugin": "4.x.x",
+        "@typescript-eslint/parser": "4.x.x",
+        "babel-plugin-module-resolver": "^4.1.0",
+        "eslint": "7.x.x",
+        "eslint-plugin-module-resolver": "1.x.x",
+        "prettier": "2.x.x",
+        "typescript": "4.x.x"
     }
 }
